--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "tree-sitter-fish",
+  "name": "@esdmr/tree-sitter-fish",
   "version": "3.5.1",
   "description": "Fish tree-sitter grammar",
-  "main": "bindings/node",
+  "main": "tree-sitter-fish.wasm",
+  "exports": {
+    ".": "./tree-sitter-fish.wasm",
+    "./tree-sitter-fish.wasm": "./tree-sitter-fish.wasm",
+    "./package.json": "./package.json"
+  },
+  "files": ["tree-sitter-fish.wasm"],
   "scripts": {
     "build": "tsc -p tsconfig.json && tree-sitter generate",
     "build:wasm": "npm run build && tree-sitter build-wasm",
@@ -19,22 +25,20 @@
     "parser"
   ],
   "author": "Krnik",
-  "dependencies": {
-    "nan": "^2.14.2"
-  },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "nan": "^2.14.2",
     "nodemon": "^2.0.7",
     "tree-sitter-cli": "^0.20.7",
     "typescript": "^4.9.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ram02z/tree-sitter-fish.git"
+    "url": "git+https://github.com/esdmr/tree-sitter-fish.git"
   },
-  "homepage": "https://github.com/ram02z/tree-sitter-fish#readme",
+  "homepage": "https://github.com/esdmr/tree-sitter-fish#readme",
   "bugs": {
-    "url": "https://github.com/ram02z/tree-sitter-fish/issues"
+    "url": "https://github.com/esdmr/tree-sitter-fish/issues"
   },
   "tree-sitter": [
     {
